--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,12 @@
   <title></title>
 </head>
 <body>
-    <h1> Lucas Anderson
+  <h1> Lucas Anderson </h1>
   
-      
-</body>
+      <img src="Personal Airtifact2.jpg"> 
+
+  
+  </body>
   
   
   </style>
