--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <h1> Lucas Anderson </h1>
   
+  <a href="test.html"> See my TEST page </a>
+  
       <img src="Personal Airtifact2.jpg"> 
 
  <iframe src="https://scratch.mit.edu/projects/425797442/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
