--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
   
-  PASTE NAV BAR
+    <!-- Nav Bar Start-->
+  <ul class="nav">
+    <li class="nav"> <a href="#home"> Home </a></li>
+    <li class="nav"> <a href="#h2"> Projects </a></li>
+
+
+  </ul>
+<!-- Nav Bar End-->
   
   
   <h1> Lucas Anderson </h1>
