--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
   
-    <!-- Nav Bar Start-->
-  <ul class="nav">
-    <li class="nav"> <a href="#home"> Home </a></li>
-    <li class="nav"> <a href="#h2"> Projects </a></li>
+  <h1> Lucas Anderson's Website </h1>
+  
+    <ul>
+      
+    <li class="nav"> <a href="index.html"> Home </a> </li>
+    <li class="nav"> <a href="app.html"> Projects </a> </li>
 
 
-  </ul>
-<!-- Nav Bar End-->
+    </ul>
+
   
   
   <h1> Lucas Anderson </h1>
@@ -30,44 +32,7 @@
   </style>
 
 }
-li.nav {
-  float: right;
-  background-color: gold;
-  display: inline;
-}
-li a {
-  display: block;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: black;
-}
 
-li a:hover {
-  background-color: salmon;
-}
-
-ul.circle {
-  list-style-type: circle;
-  float: right;
-  color: salmon;
-}
-
-p {
-  color: blue;
-}
-
-ul.nav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  background-color: gold;
-  top: 0;
-}
-html, body {
-  margin: 0;
 }
 
   </style>
