--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,6 @@
 </head>
 <body>
   
-  <h1> Lucas Anderson's Website </h1>
   
     <ul>
       
@@ -28,13 +26,42 @@
  <iframe src="https://scratch.mit.edu/projects/425797442/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
   
-  
-  </style>
-
+  li.nav {
+  float: right;
+  background-color: gold;
+  display: inline;
+}
+li a {
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: black;
 }
 
+li a:hover {
+  background-color: black;
 }
 
-  </style>
+ul.circle {
+  list-style-type: circle;
+  float: right;
+  color: black;
+}
 
-</html>
+p {
+  color: black;
+}
+
+ul.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  background-color: gold;
+  top: 0;
+}
+html, body {
+  margin: 0;
+}
