--- a/app.html
+++ b/app.html
@@ -9,8 +9,9 @@
 
 
   <h1>
-    https://studio.code.org/projects/applab/r-pas1N8CGkRuBIISobP3MjWfxX3gJlEUStM4gfOIXM/edit
+    <iframe src="https://studio.code.org/projects/applab/r-pas1N8CGkRuBIISobP3MjWfxX3gJlEUStM4gfOIXM/edit" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   
+    <iframe src="https://scratch.mit.edu/projects/425797442/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   
   <body>
   
