--- a/app.html
+++ b/app.html
@@ -1,7 +1,13 @@
 <html>
 <body>
   
-  PASTE NAV BAR
+  <ul>
+      
+    <li class="nav"> <a href="index.html"> Home </a> </li>
+    <li class="nav"> <a href="app.html"> Projects </a> </li>
+
+
+  </ul>
   
   
 <p> This is o see if the text will work
