--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
  <iframe src="https://scratch.mit.edu/projects/425797442/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
   
+  
+  <style>
   li.nav {
   float: right;
   background-color: gold;
@@ -65,3 +67,6 @@ ul.nav {
 html, body {
   margin: 0;
 }
+
+    
+  </style>
