--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=">
-  <title></title>
+  <title> Lucas Anderson's Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,11 +13,9 @@
       
     <li class="nav"> <a href="index.html"> Home </a> </li>
     <li class="nav"> <a href="app.html"> Projects </a> </li>
-
-
     </ul>
 
-  
+  <center>
   
   <h1> Lucas Anderson </h1>
 
